--- a/crawler/code/visualize/index.html
+++ b/crawler/code/visualize/index.html
@@ -5,7 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style type="text/css">
-
+        svg {
+          position: absolute;
+          top:0;
+          bottom:0;
+        }
         .link { stroke: #999; stroke-opacity: .6;}
     </style>
 </head>
